open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
/********************************************************************************
 * Copyright (c) 2022 Imixs Software Solutions GmbH,
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You can receive a copy of the GNU General Public
 * License at http://www.gnu.org/licenses/gpl.html
 *
 * Project:
 *     https://github.com/imixs/open-bpmn
 *
 * Contributors:
 *     Imixs Software Solutions GmbH - Project Management
 *     Ralph Soika - Software Developer
 ********************************************************************************/
.tool-palette {
    z-index: 10;
}

.bpmn-property-panel {
    position: absolute;
    bottom: 0px;
    z-index: 20;
    width: 100%;
    background: var(--theia-editor-background);
    opacity: 0.98 !important;
    color: var(--theia-editor-foreground);
    height: 28px;
}

/* theia-editorWidget-background */
.bpmn-property-header {
    padding-left: 8px;
    background: var(--theia-titleBar-activeBackground);
    color: var(--theia-titleBar-activeForeground);
    opacity: 1;
    font-weight: bold;
    border: 0;
    overflow: hidden;
    padding: 2px 5px 3px 5px;
    line-height: 1.5em;
    box-shadow: none;
    border-top: 3px solid var(--theia-focusBorder);
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    cursor: row-resize;
}

.bpmn-property-header .header-icon {
    display: inherit;
}

.bpmn-property-header .header-icon i {
    padding-left: 4px;
    padding-right: 4px;
}

.bpmn-property-header .header-tools {
    cursor: default;
}

.bpmn-property-header .header-tools i {
    border: none;
}

.bpmn-property-header .header-tools i:hover:not(.clicked) {
    background: var(--theia-menubar-selectionBackground);
}

.bpmn-property-header .header-tools .clicked,
.bpmn-property-header .header-tools i:hover {
    background: none;
    border: none;
}

.bpmn-property-header .header-icon span::first-letter {
    text-transform: capitalize;
}


/* Scrollbar behavior in property details block */
.bpmn-properties-body {
    height: 100%;
}

.bpmn-properties-body .categorization {
    height: 100%;
}

.bpmn-properties-body .categorization-master {
    background: var(--theia-titleBar-activeBackground);
}

.categorization>.categorization-master ul li.selected>span {
    color: var(--theia-sideBar-foreground);
    background: var(--theia-sideBar-background);
}

.bpmn-properties-body .categorization-detail {
    overflow: auto;
    margin-bottom: 28px;
}

/* Button layout in property details block */
.bpmn-properties-body .categorization-detail button {
    float: right;
    color: var(--theia-button-foreground);
    background-color: var(--theia-button-background);
    cursor: pointer;
    border: none;
    padding: 4px 9px;
    margin: 0 1px;
}

.bpmn-properties-body .categorization-detail button:focus {
    outline: 1px solid var(--theia-focusBorder);
    outline-offset: 1px;
}

.bpmn-properties-body .categorization-detail button:hover {
    background-color: var(--theia-button-hoverBackground);
}

.bpmn-properties-body .categorization-detail .child-controls {
    float: right;
    border-bottom: 1px solid #aaa;
    width: 100%;
    padding-bottom: 5px;
}

.bpmn-properties-body .categorization-detail .vertical-layout {
    clear: both;
}

/* Custom BPMN Styles **/
.bpmn-properties-body .control>textarea {
    min-height: 14rem !important;
}

.bpmn-properties-body .control.text-file-editor>label {
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
}

.bpmn-properties-body .control.text-file-editor>label .file-selector {
    font-weight: bold;
    color: var(--theia-focusBorder);
}

.bpmn-properties-body .control.text-file-editor>textarea {
    min-height: 22rem !important;
}

.bpmn-properties-body .control.text-file-editor>textarea.fileInputMode {
    min-height: 1em !important;
    line-height: 1.5rem;
}

.input-description {
    color: #666;
    font-size: var(--theia-ui-font-size0) !important;
    line-height: 1.4rem;
    margin-left: 3px;
}

